# khanar

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CmakeLists.txt~  README.md  clean.sh  clean_assets.sh  generate_doxygen.sh  khanar.doxygen
Sources/: CMakeLists.txt  CmakeLists.txt~
assets/: #fenbar.glade#  #window.glade#  TEST.h  arborescence.txt  boxlayout.glade  class-diagram.dia  close.glade  factory.dia  fenbar.glade  hboxlayout.glade  new.glade  observer.dia  panelsidebar.glade  propertiesbar.glade  strategy.dia  topbar.glade  vboxlayout.glade  window.glade
build_debug/: CMakeCache.txt
doc/html/: _file_8hpp.html  _file_8hpp_source.html  annotated.html  classes.html  classkhanar__common__file_1_1_file.html  classkhanar__common__file_1_1_file__coll__graph.md5  classkhanar__common__file_1_1_file__inherit__graph.map  classkhanar__common__file_1_1_file_component.html  classkhanar__common__file_1_1_file_component__inherit__graph.map  classkhanar__common__file_1_1_file_component__inherit__graph.md5  classkhanar__common__file_1_1_folder.html  classkhanar__common__file_1_1_folder__coll__graph.md5  classkhanar__common__file_1_1_folder__inherit__graph.map  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7fe22afc4d9fcf904a0ef3f249bc1403.html  dir_93c607579e152c21c312ab72a675c5a3.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  namespacekhanar__common__file.html  namespaces.html
src/: CMakeLists.txt  fenetre.cc  fenetre.cpp  khanar.cpp  test.cpp  tmp.txt
src/assets/: mainbar.glade  recents.glade
src/file/: File.cpp  File.hpp
src/gui/: Onglet.cpp  (+14 more)
(+25 files in other folders)
